--- a/isso/Dockerfile
+++ b/isso/Dockerfile
@@ -18,6 +18,7 @@ RUN apk -U upgrade \
     ca-certificates \
     su-exec \
     tini \
+    tar \
  && pip install --no-cache cffi \
  && pip install --no-cache misaka==1.0.2 \
  && pip install --no-cache "isso==${ISSO_VER}" \
@@ -30,7 +31,7 @@ RUN chmod +x /usr/local/bin/run.sh
 
 EXPOSE 8080
 
-VOLUME /db /config
+VOLUME /data
 
 LABEL maintainer="Wonderfall <wonderfall@targaryen.house>"
 
